--- a/CHANGELOG.yaml
+++ b/CHANGELOG.yaml
@@ -1,4 +1,5 @@
-unreleased:
+6.1.1:
+  date: 2025-04-28
   fixed bugs:
     - GH-1087 Restrict access to `pm` API in external packages
     - GH-1086 Revert deprecation warnings for legacy packages
