--- a/CHANGELOG.yaml
+++ b/CHANGELOG.yaml
@@ -1,3 +1,9 @@
+unreleased:
+    fixed bugs:
+      - GH-1092 Disabled support for dynamic imports in Node environment
+    chores:
+      - Updated dependencies
+
 6.1.1:
   date: 2025-04-28
   fixed bugs:
