--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "build-sandbox-types": "node npm/build-sandbox-types.js",
     "build-types": "npm run build-common-types && npm run build-sandbox-types",
     "cache": "node npm/cache.js $1",
+    "cache:watch": "nodemon --watch lib/sandbox npm/cache.js $1",
     "codecov": "node npm/publish-coverage.js",
     "prepublishOnly": "node npm/prepublish.js",
     "pretest": "npm run cache",
@@ -82,6 +83,7 @@
     "lodash3": "3.10.2",
     "mocha": "^11.1.0",
     "moment": "2.30.1",
+    "nodemon": "^3.1.10",
     "nyc": "^17.1.0",
     "packity": "^0.3.5",
     "parse-gitignore": "^2.0.0",
