--- a/CHANGELOG.yaml
+++ b/CHANGELOG.yaml
@@ -3,6 +3,8 @@ unreleased:
     - GH-1094 Add support for referencing pre-defined collection requests using `pm.execution.runRequest`
   fixed bugs:
     - GH-1095 Scrub `process` object in Node environment
+  chores:
+    - Updated dependencies
 
 6.1.2:
   date: 2025-06-12
