--- a/CHANGELOG.yaml
+++ b/CHANGELOG.yaml
@@ -1,6 +1,9 @@
-unreleased:
+6.2.0:
+  date: 2025-09-05
   new features:
-    - GH-1094 Add support for referencing pre-defined collection requests using `pm.execution.runRequest`
+    - >-
+      GH-1094 Add support for referencing pre-defined collection requests using
+      `pm.execution.runRequest`
   fixed bugs:
     - GH-1095 Scrub `process` object in Node environment
   chores:
