--- a/CHANGELOG.yaml
+++ b/CHANGELOG.yaml
@@ -1,7 +1,9 @@
-unreleased:
+6.3.0:
+  date: 2025-12-01
   new features:
-    - GH-1098 Add support for avoiding default response-class
-      casting in `pm.execution.runRequest` return-value
+    - >-
+      GH-1098 Add support for avoiding default response-class casting in
+      `pm.execution.runRequest` return-value
 
 6.2.2:
   date: 2025-10-30
