--- a/CHANGELOG.yaml
+++ b/CHANGELOG.yaml
@@ -1,3 +1,8 @@
+unreleased:
+  new features:
+    - >-
+      GH-1105 Add support for legacy response APIs without an explicit "test" target
+
 6.5.0:
   date: 2026-02-04
   new features:
