--- a/CHANGELOG.yaml
+++ b/CHANGELOG.yaml
@@ -1,3 +1,9 @@
+unreleased:
+  new features:
+    - >-
+      GH-1105 Add support for options.allowSkipRequest at execution-level and decouple
+      skipRequest from a fixed "prerequest" target
+
 6.5.0:
   date: 2026-02-04
   new features:
