--- a/CHANGELOG.yaml
+++ b/CHANGELOG.yaml
@@ -1,5 +1,6 @@
 unreleased:
   new features:
+    - GH-1104 Add support for legacy response APIs without an explicit "test" target
     - >-
       GH-1105 Add support for options.allowSkipRequest at execution-level and decouple
       skipRequest from a fixed "prerequest" target
