--- a/CHANGELOG.yaml
+++ b/CHANGELOG.yaml
@@ -4,6 +4,8 @@ unreleased:
     - >-
       GH-1105 Add support for options.allowSkipRequest at execution-level and decouple
       skipRequest from a fixed "prerequest" target
+  chores:
+    - Updated dependencies
 
 6.5.0:
   date: 2026-02-04
