--- a/CHANGELOG.yaml
+++ b/CHANGELOG.yaml
@@ -1,9 +1,12 @@
-unreleased:
+6.6.0:
+  date: 2026-02-17
   new features:
-    - GH-1104 Add support for legacy response APIs without an explicit "test" target
     - >-
-      GH-1105 Add support for options.allowSkipRequest at execution-level and decouple
-      skipRequest from a fixed "prerequest" target
+      GH-1104 Add support for legacy response APIs without an explicit "test"
+      target
+    - >-
+      GH-1105 Add support for options.allowSkipRequest at execution-level and
+      decouple skipRequest from a fixed "prerequest" target
   chores:
     - Updated dependencies
 
