--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "postman-sandbox",
-  "version": "6.6.0",
+  "version": "6.6.1-beta.1",
   "description": "Sandbox for Postman Scripts to run in Node.js or browser",
   "author": "Postman Inc.",
   "license": "Apache-2.0",
